fix(styles): overlapping select items in safari

--- a/src/components/shared/select/select.module.scss
+++ b/src/components/shared/select/select.module.scss
@@ -104,6 +104,7 @@
 }
 
 .item {
+  flex-shrink: 0;
   width: 100%;
   padding: 0;
   margin-bottom: 15px;
